sidebar alignment fix

--- a/mati/assets/stylesheets/style.css
+++ b/mati/assets/stylesheets/style.css
@@ -656,12 +656,6 @@ color: white;
       }
 
       .sidebar-secondary {
-        top: 0;
-
-
-        display: block;
-        position: absolute;
-
         background-color:white;
       }
 
